--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(ProgrammingCourseWork)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(ProgrammingCourseWork binarySearch.h "graph .cpp")
+add_executable(Btree binaryTree/binarySearch.cpp)
+add_executable(Graph graph/binarySearch.h "graph/graph.cpp")
