--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(ProgrammingCourseWork)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(Btree binaryTree/binarySearch.cpp)
-add_executable(Graph graph/binarySearch.h "graph/graph.cpp")
+add_executable(Graph graph/binarySearch.h "graph/graph.cpp" graph/stack.h)
