unit testing done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,4 @@ project(ProgrammingCourseWork)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Btree binaryTree/binarySearch.cpp)
-add_executable(Graph graph/binarySearch.h "graph/graph.cpp" graph/stack.h)
+add_executable(unitTesting "unitTesting/testing.cpp" graph/graph.h graph/binarySearch.h)
