--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(ProgrammingCourseWork)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(unitTesting "unitTesting/testing.cpp" graph/graph.h graph/binarySearch.h)
+add_executable(treeTesting "unitTesting/testingTree.cpp" main/graph.h main/binarySearch.h)
+add_executable(graphTesting "unitTesting/graphTesting.cpp" main/graph.h main/binarySearch.h)
+
