--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ set(CMAKE_CXX_STANDARD 14)
 
 add_executable(treeTesting "unitTesting/testingTree.cpp" main/graph.h main/binarySearch.h)
 add_executable(graphTesting "unitTesting/graphTesting.cpp" main/graph.h main/binarySearch.h)
+add_executable(generalTest "unitTesting/testFile.cpp" main/graph.h main/binarySearch.h)
 
